logs/UnsafeAtomics_0.7.log
>>> 'Pkg.add("UnsafeAtomics")' log
WARNING: Base.Pkg is deprecated, run `using Pkg` instead
 in module Main
[ Info: Installing UnsafeAtomics v0.0.1
[ Info: Package database updated

>>> 'Pkg.test("UnsafeAtomics")' log
WARNING: Base.versioninfo is deprecated: it has been moved to the standard library package `InteractiveUtils`.
Add `using InteractiveUtils` to your imports.
 in module Main
WARNING: Base.versioninfo is deprecated: it has been moved to the standard library package `InteractiveUtils`.
Add `using InteractiveUtils` to your imports.
 in module Main
Julia Version 0.7.0-DEV.4449
Commit d1f26785f2 (2018-03-02 17:11 UTC)
Platform Info:
  OS: Linux (x86_64-pc-linux-gnu)
      Ubuntu 14.04.5 LTS
  uname: Linux 3.13.0-135-generic #184-Ubuntu SMP Wed Oct 18 11:55:51 UTC 2017 x86_64 x86_64
  CPU: Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
              speed         user         nice          sys         idle          irq
       #1  3508 MHz    4229522 s       7714 s     236102 s    1170334 s         89 s
       #2  3508 MHz     942866 s         48 s      90330 s    5491378 s          4 s
       
  Memory: 2.93927001953125 GB (1166.61328125 MB free)
  Uptime: 66498.0 sec
  Load Avg:  1.00439453125  0.99609375  0.96533203125
  WORD_SIZE: 64
  LIBM: libopenlibm
  LLVM: libLLVM-3.9.1 (ORCJIT, haswell)
Environment:
  TERM = vt100
  LD_LIBRARY_PATH = :/usr/local/lib/
  PATH = /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/home/vagrant/julia/bin/
  JAVA_HOME = /usr/lib/jvm/java-8-openjdk-amd64
  HOME = /home/vagrant
Packages:
  Package Directory: /home/vagrant/.julia/v0.7
  Package Status:
2 required packages:
 - JSON                          0.17.1
 - UnsafeAtomics                 0.0.1
3 additional packages:
 - Compat                        0.56.0
 - Nullables                     0.0.3
 - tmpwtT1Hq                     0.0.0-             non-repo (unregistered)
WARNING: Base.Pkg is deprecated, run `using Pkg` instead
 in module Main
[ Info: Testing UnsafeAtomics
WARNING: Base.Test is deprecated, run `using Test` instead
  likely near /home/vagrant/.julia/v0.7/UnsafeAtomics/test/runtests.jl:3
┌ Warning: Constructors no longer fall back to `convert`. A constructor `VersionNumber(::VersionNumber)` should be defined instead.
│   caller = top-level scope at UnsafeAtomics.jl:46
└ @ Core UnsafeAtomics.jl:46
┌ Warning: Constructors no longer fall back to `convert`. A constructor `VersionNumber(::VersionNumber)` should be defined instead.
│   caller = top-level scope at UnsafeAtomics.jl:47
└ @ Core UnsafeAtomics.jl:47
┌ Warning: Constructors no longer fall back to `convert`. A constructor `VersionNumber(::VersionNumber)` should be defined instead.
│   caller = top-level scope at UnsafeAtomics.jl:49
└ @ Core UnsafeAtomics.jl:49
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_cas!{T <: AtomicTypes}(x::Array{T}, idx::Integer, cmp::T, new::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:122.
│ Use `unsafe_atomic_cas!(x::Array{T}, idx::Integer, cmp::T, new::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:122
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_xchg!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_xchg!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_add!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_add!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_sub!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_sub!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_and!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_and!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_nand!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_nand!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_or!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_or!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_xor!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_xor!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_max!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_max!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_min!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_min!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
ERROR: LoadError: error compiling test_threaded_loop_and_atomic_add: error compiling #8#threadsfor_fun: Failed to parse LLVM Assembly: 
julia: llvmcall:3:26: error: '%0' defined with type 'i64'
%rv = atomicrmw add i64* %0, i64 %1 acq_rel
                         ^

Stacktrace:
 [1] top-level scope
 [2] include at ./boot.jl:305 [inlined]
 [3] include_relative(::Module, ::String) at ./loading.jl:1072
 [4] include(::Module, ::String) at ./sysimg.jl:29
 [5] exec_options(::Base.JLOptions) at ./client.jl:332
 [6] _start() at ./client.jl:448
in expression starting at /home/vagrant/.julia/v0.7/UnsafeAtomics/test/runtests.jl:33
┌ Error: ------------------------------------------------------------
│ # Testing failed for UnsafeAtomics
│   exception =
│    failed process: Process(`/home/vagrant/julia/bin/julia -Cnative -J/home/vagrant/julia/lib/julia/sys.so --compile=yes --depwarn=yes --code-coverage=none --color=no --compiled-modules=yes --check-bounds=yes --warn-overwrite=yes --startup-file=yes /home/vagrant/.julia/v0.7/UnsafeAtomics/test/runtests.jl`, ProcessExited(1)) [1]
│    Stacktrace:
│     [1] error(::String, ::Base.Process, ::String, ::Int64, ::String) at ./error.jl:42
│     [2] pipeline_error(::Base.Process) at ./process.jl:712
│     [3] #run#534(::Bool, ::Function, ::Cmd) at ./process.jl:670
│     [4] run at ./process.jl:668 [inlined]
│     [5] (::getfield(Pkg.Entry, Symbol("##56#57")){Bool,String,Array{AbstractString,1}})() at /buildworker/worker/package_linux64/build/usr/share/julia/site/v0.7/Pkg/src/entry.jl:729
│     [6] cd(::getfield(Pkg.Entry, Symbol("##56#57")){Bool,String,Array{AbstractString,1}}, ::String) at ./file.jl:72
│     [7] #test!#55(::Bool, ::Function, ::String, ::Array{AbstractString,1}, ::Array{AbstractString,1}, ::Array{AbstractString,1}) at /buildworker/worker/package_linux64/build/usr/share/julia/site/v0.7/Pkg/src/entry.jl:717
│     [8] (::getfield(Pkg.Entry, Symbol("#kw##test!")))(::NamedTuple{(:coverage,),Tuple{Bool}}, ::typeof(Pkg.Entry.test!), ::String, ::Array{AbstractString,1}, ::Array{AbstractString,1}, ::Array{AbstractString,1}) at ./<missing>:0
│     [9] #test#59(::Bool, ::Function, ::Array{AbstractString,1}) at /buildworker/worker/package_linux64/build/usr/share/julia/site/v0.7/Pkg/src/entry.jl:756
│     [10] #test at ./<missing>:0 [inlined]
│     [11] #4 at /buildworker/worker/package_linux64/build/usr/share/julia/site/v0.7/Pkg/src/dir.jl:36 [inlined]
│     [12] cd(::getfield(Pkg.Dir, Symbol("##4#7")){Base.Iterators.Pairs{Symbol,Bool,Tuple{Symbol},NamedTuple{(:coverage,),Tuple{Bool}}},typeof(Pkg.Entry.test),Tuple{Array{AbstractString,1}}}, ::String) at ./file.jl:72
│     [13] #cd#1(::Base.Iterators.Pairs{Symbol,Bool,Tuple{Symbol},NamedTuple{(:coverage,),Tuple{Bool}}}, ::Function, ::Function, ::Array{AbstractString,1}, ::Vararg{Array{AbstractString,1},N} where N) at /buildworker/worker/package_linux64/build/usr/share/julia/site/v0.7/Pkg/src/dir.jl:36
│     [14] (::getfield(Pkg.Dir, Symbol("#kw##cd")))(::NamedTuple{(:coverage,),Tuple{Bool}}, ::typeof(Pkg.Dir.cd), ::Function, ::Array{AbstractString,1}, ::Vararg{Array{AbstractString,1},N} where N) at ./<missing>:0
│     [15] #test#3(::Bool, ::Function, ::String, ::Vararg{String,N} where N) at /buildworker/worker/package_linux64/build/usr/share/julia/site/v0.7/Pkg/src/Pkg.jl:276
│     [16] test(::String, ::Vararg{String,N} where N) at /buildworker/worker/package_linux64/build/usr/share/julia/site/v0.7/Pkg/src/Pkg.jl:276
│     [17] top-level scope
│     [18] eval at ./boot.jl:308 [inlined]
│     [19] eval(::Module, ::Expr) at ./sysimg.jl:74
│     [20] exec_options(::Base.JLOptions) at ./client.jl:309
│     [21] _start() at ./client.jl:448
└ @ Pkg.Entry entry.jl:732
ERROR: UnsafeAtomics had test errors

>>> End of log
